# OSSR-assist

./: .env.example  .gitignore  AI_ROB.py  AI_anthropic.py  AI_extraction.py  AI_hyperbolicxyz.py  AI_mistral.py  AI_openai.py  AI_outcomes.py  AI_screening.py  AI_utils.py  LICENSE  LICENSE.md  README.md  ZZZpubmed.py  app.py  data.py  experimental_script.py  extraction_fields.py  load_reference_file.py  outcomes.py  pdfs.py  projects.py  prompts.py  pubmed.py  pyproject.toml  questions.json  records.py  records_deduplication.py  requirements.txt  research_questions.py  retraction_watch.py  second_reviewer.py  setup.py  srai_database.sqlite  standard_fields_DIAG.json  standard_fields_OBS.json  standard_fields_RCT.json  studies.py  test endnote.py  (+4 more)
pdf/: tempo.json
static/: ccs1.css
templates/: AI_doublecheck.html  AI_extraction.html  _ai_extraction_ROB.html  _ai_extraction_fields.html  _navbar1.html  _screening_buttons.html  _screening_message.html  base.html  base_study_fullscreen.html  data1.html  extraction_field_edit.html  fulltext_access_.html  llm_comparison_extraction.html  llm_comparison_outcomes.html  outcome_edit.html  panel_references.html  pdf_upload_panel.html  pdfs_list.html  project_load_form.html  project_setup_1.html  project_setup_2.html  project_setup_outcomes.html  project_setup_research_questions.html  projects_list.html  record_edit.html  records_deduplication.html  records_flowchart.html  records_list.html  records_screening_pass1_study_created.html  records_screening_pass1_window.html  records_screening_pass2_window.html  records_upload_form.html  (+20 more)
(+1 files in other folders)
