[project]
name = "OSSR-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.1",
    "flask>=3.1.1",
    "langchain-anthropic>=0.3.14",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.18",
    "mistralai>=1.8.1",
    "mistune>=3.1.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pymupdf4llm>=0.0.24",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
